[gd_scene load_steps=8 format=3 uid="uid://dslgdivf1nqj0"]

[ext_resource type="Script" path="res://scenes/gui/physics_debug.gd" id="1_ufebv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pnq7"]
bg_color = Color(0.341176, 0.341176, 0.341176, 0.160784)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.947199, 0.947199, 0.947199, 1)
shadow_color = Color(0.111197, 0.111197, 0.111197, 0.6)

[sub_resource type="SystemFont" id="SystemFont_7oah2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prf41"]
bg_color = Color(0.52549, 0.52549, 0.52549, 0.376471)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.942823, 0.942823, 0.942823, 1)

[sub_resource type="SystemFont" id="SystemFont_22vmt"]

[sub_resource type="SystemFont" id="SystemFont_cxk7f"]

[sub_resource type="SystemFont" id="SystemFont_31oin"]

[node name="PhysicsDebug" type="Panel"]
offset_right = 512.0
offset_bottom = 384.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3pnq7")
script = ExtResource("1_ufebv")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 23.0
theme_override_fonts/font = SubResource("SystemFont_7oah2")
theme_override_font_sizes/font_size = 16
text = "Physics Debug Console"

[node name="TireFL" type="Panel" parent="."]
layout_mode = 0
offset_top = 28.0
offset_right = 256.0
offset_bottom = 168.0
theme_override_styles/panel = SubResource("StyleBoxFlat_prf41")

[node name="Title" type="Label" parent="TireFL"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(1, 0.931, 0.31, 1)
theme_override_fonts/font = SubResource("SystemFont_22vmt")
theme_override_font_sizes/font_size = 10
text = "Tyre FL"

[node name="Text" type="Label" parent="TireFL"]
layout_mode = 0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 140.0
theme_override_fonts/font = SubResource("SystemFont_cxk7f")
theme_override_font_sizes/font_size = 11

[node name="TireFR" type="Panel" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 28.0
offset_right = 512.0
offset_bottom = 168.0
theme_override_styles/panel = SubResource("StyleBoxFlat_prf41")

[node name="Title" type="Label" parent="TireFR"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(1, 0.929412, 0.309804, 1)
theme_override_fonts/font = SubResource("SystemFont_22vmt")
theme_override_font_sizes/font_size = 10
text = "Tyre FR
"

[node name="Text" type="Label" parent="TireFR"]
layout_mode = 0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 140.0
theme_override_fonts/font = SubResource("SystemFont_cxk7f")
theme_override_font_sizes/font_size = 11

[node name="TireRL" type="Panel" parent="."]
layout_mode = 0
offset_top = 168.0
offset_right = 256.0
offset_bottom = 308.0
theme_override_styles/panel = SubResource("StyleBoxFlat_prf41")

[node name="Title" type="Label" parent="TireRL"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(1, 0.929412, 0.309804, 1)
theme_override_fonts/font = SubResource("SystemFont_22vmt")
theme_override_font_sizes/font_size = 10
text = "Tyre RL"

[node name="Text" type="Label" parent="TireRL"]
layout_mode = 0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 140.0
theme_override_fonts/font = SubResource("SystemFont_cxk7f")
theme_override_font_sizes/font_size = 11

[node name="TireRR" type="Panel" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 168.0
offset_right = 512.0
offset_bottom = 308.0
theme_override_styles/panel = SubResource("StyleBoxFlat_prf41")

[node name="Title" type="Label" parent="TireRR"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(1, 0.929412, 0.309804, 1)
theme_override_fonts/font = SubResource("SystemFont_22vmt")
theme_override_font_sizes/font_size = 10
text = "Tyre RR
"

[node name="Text" type="Label" parent="TireRR"]
layout_mode = 0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 140.0
theme_override_fonts/font = SubResource("SystemFont_cxk7f")
theme_override_font_sizes/font_size = 11

[node name="Text" type="Label" parent="."]
layout_mode = 0
offset_top = 312.0
offset_right = 512.0
offset_bottom = 384.0
theme_override_fonts/font = SubResource("SystemFont_31oin")
theme_override_font_sizes/font_size = 11
